change homeHeaderGallery and disable useless widget
Signed-off-by: fantao <phantasy015@qq.com>

--- a/lib/l10n/intl_af.arb
+++ b/lib/l10n/intl_af.arb
@@ -719,7 +719,7 @@
   "colorsLime": "LEMMETJIEGROEN",
   "colorsLightGreen": "LIGGROEN",
   "colorsGreen": "GROEN",
-  "homeHeaderGallery": "Galery",
+  "homeHeaderGallery": "APP",
   "homeHeaderCategories": "Kategorieë",
   "shrineDescription": "'n Modieuse kleinhandelprogram",
   "craneDescription": "'n Gepersonaliseerde reisprogram",
