--- a/lib/l10n/intl_as.arb
+++ b/lib/l10n/intl_as.arb
@@ -719,7 +719,7 @@
   "colorsLime": "নেমুৰঙী",
   "colorsLightGreen": "পাতল সেউজীয়া",
   "colorsGreen": "সেউজীয়া",
-  "homeHeaderGallery": "Gallery",
+  "homeHeaderGallery": "APP",
   "homeHeaderCategories": "শিতানসমূহ",
   "shrineDescription": "ফেশ্বনৰ লগত জড়িত এটা খুচৰা এপ্‌",
   "craneDescription": "এটা ব্যক্তিগতকৃত ভ্ৰমণৰ এপ্‌",
