--- a/lib/l10n/intl_en_CA.arb
+++ b/lib/l10n/intl_en_CA.arb
@@ -719,7 +719,7 @@
   "colorsLime": "LIME",
   "colorsLightGreen": "LIGHT GREEN",
   "colorsGreen": "GREEN",
-  "homeHeaderGallery": "Gallery",
+  "homeHeaderGallery": "APP",
   "homeHeaderCategories": "Categories",
   "shrineDescription": "A fashionable retail app",
   "craneDescription": "A personalized travel app",
