--- a/lib/l10n/intl_fil.arb
+++ b/lib/l10n/intl_fil.arb
@@ -719,7 +719,7 @@
   "colorsLime": "LIME",
   "colorsLightGreen": "LIGHT GREEN",
   "colorsGreen": "BERDE",
-  "homeHeaderGallery": "Gallery",
+  "homeHeaderGallery": "APP",
   "homeHeaderCategories": "Mga Kategorya",
   "shrineDescription": "Isang fashionable na retail app",
   "craneDescription": "Isang naka-personalize na travel app",
