--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -720,7 +720,7 @@
   "colorsLime": "绿黄色",
   "colorsLightGreen": "浅绿色",
   "colorsGreen": "绿色",
-  "homeHeaderGallery": "图库",
+  "homeHeaderGallery": "应用程序",
   "homeHeaderCategories": "类别",
   "shrineDescription": "时尚的零售应用",
   "craneDescription": "个性化旅行应用",
