--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -719,7 +719,7 @@
   "colorsLime": "青檸色",
   "colorsLightGreen": "淺綠色",
   "colorsGreen": "綠色",
-  "homeHeaderGallery": "相片集",
+  "homeHeaderGallery": "應用程序",
   "homeHeaderCategories": "類別",
   "shrineDescription": "時尚零售應用程式",
   "craneDescription": "個人化旅遊應用程式",
