--- a/lib/l10n/intl_zh_TW.arb
+++ b/lib/l10n/intl_zh_TW.arb
@@ -719,7 +719,7 @@
   "colorsLime": "萊姆綠",
   "colorsLightGreen": "淺綠色",
   "colorsGreen": "綠色",
-  "homeHeaderGallery": "圖庫",
+  "homeHeaderGallery": "應用程序",
   "homeHeaderCategories": "類別",
   "shrineDescription": "時尚零售應用程式",
   "craneDescription": "為你量身打造的旅遊應用程式",
