--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -354,7 +354,7 @@
   "demoCupertinoSliderContinuous": "连续：{value}",
   "demoCupertinoSliderDiscrete": "间续：{value}",
   "demoSnackbarsAction": "您已按下该信息提示控件上的操作按钮。",
-  "backToGallery": "返回 Flutter Gallery",
+  "backToGallery": "返回 App Gallery",
   "demoCupertinoTabBarTitle": "标签页栏",
   "demoCupertinoSwitchDescription": "开关用于切换单个设置的开启/关闭状态。",
   "demoSnackbarsActionButtonLabel": "操作",
@@ -737,7 +737,7 @@
   "settingsPlatformMechanics": "平台力学",
   "settingsDarkTheme": "深色",
   "settingsSlowMotion": "慢镜头",
-  "settingsAbout": "关于 Flutter Gallery",
+  "settingsAbout": "关于 App Gallery",
   "settingsFeedback": "发送反馈",
   "settingsAttribution": "由伦敦的 TOASTER 设计",
   "demoButtonTitle": "按钮",
