--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -739,7 +739,7 @@
   "settingsSlowMotion": "慢镜头",
   "settingsAbout": "关于 App Gallery",
   "settingsFeedback": "发送反馈",
-  "settingsAttribution": "由伦敦的 TOASTER 设计",
+  "settingsAttribution": "给时光以生命",
   "demoButtonTitle": "按钮",
   "demoButtonSubtitle": "文本按钮、凸起按钮、轮廓按钮等",
   "demoFlatButtonTitle": "平面按钮",
