don't add custom fonts and all english in first page
Signed-off-by: fantao <phantasy015@qq.com>

--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -62,7 +62,7 @@
   "demoContainerTransformDemoInstructions": "卡片、列表和 FAB",
   "demoNavigationDrawerSubtitle": "在应用栏中显示抽屉式导航栏",
   "replyDescription": "高效并且重点突出的电子邮件应用",
-  "chatDescription": "基于ChatGPT",
+  "chatDescription": "Base on ChatGPT",
   "demoNavigationDrawerDescription": "从屏幕边缘水平滑入以在应用中显示导航链接的 Material Design 面板。",
   "replyDraftsLabel": "草稿",
   "demoNavigationDrawerToPageOne": "第一个项目",
@@ -720,7 +720,7 @@
   "colorsLime": "绿黄色",
   "colorsLightGreen": "浅绿色",
   "colorsGreen": "绿色",
-  "homeHeaderGallery": "应用程序",
+  "homeHeaderGallery": "APP",
   "homeHeaderCategories": "类别",
   "shrineDescription": "时尚的零售应用",
   "craneDescription": "个性化旅行应用",
@@ -739,7 +739,7 @@
   "settingsSlowMotion": "慢镜头",
   "settingsAbout": "关于 App Gallery",
   "settingsFeedback": "发送反馈",
-  "settingsAttribution": "给时光以生命",
+  "settingsAttribution": "To Give Life To Time",
   "demoButtonTitle": "按钮",
   "demoButtonSubtitle": "文本按钮、凸起按钮、轮廓按钮等",
   "demoFlatButtonTitle": "平面按钮",
