--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -4,5 +4,13 @@
   "settingsAttribution": "To Give Life To Time",
   "githubRepo": "{repoName} GitHub 代码库",
   "aboutDialogDescription": "要查看此应用的源代码，请访问 {repoLink}。",
+  "chatGPT35Desc": "一个快速且廉价的解决简易任务的模型",
+  "chatGPT40Desc": "用更高的准确度解决复杂问题",
+  "chatGPT4oDesc": "最新的GPT4模型",
+  "dallEDesc": "根据自然语言提示生成图像的模型",
+  "claude3HaikuDesc": "最快且最紧凑的模型，实现近乎即时的响应",
+  "claude3SonnetDesc": "在智能与输出速度之间完美平衡",
+  "claude3OpusDesc": "应对高度复杂任务的强大模型",
+  "claude35SonnetDesc": "最具智慧的模型",
   "botsCentre": "探索GPT"
 }
