--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -1,6 +1,7 @@
 {
   "homeHeaderGallery": "APP",
   "chatDescription": "Base on ChatGPT",
+  "newChat": "新会话",
   "settingsAttribution": "To Give Life To Time",
   "githubRepo": "{repoName} GitHub 代码库",
   "aboutDialogDescription": "要查看此应用的源代码，请访问 {repoLink}。",
