more l10n and new app name
Signed-off-by: fantao <phantasy015@qq.com>

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,9 @@
 {
-  "homeHeaderGallery": "APP",
+  "appTitle": "AI ASSISTANT",
+  "@appTitle": {
+    "description": "app title"
+  },
+  "homeHeaderGallery": "Asssistants",
   "@homeHeaderGallery": {
     "description": "Header title on home screen for Gallery section."
   },
