--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -1,5 +1,6 @@
 {
-  "homeHeaderGallery": "APP",
+  "appTitle": "AI助手",
+  "homeHeaderGallery": "Asssistants",
   "chatDescription": "Base on ChatGPT",
   "newChat": "新会话",
   "settingsAttribution": "To Give Life To Time",
