--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "AI助手",
-  "homeHeaderGallery": "Asssistants",
+  "homeHeaderGallery": "Assistants",
   "chatDescription": "Base on ChatGPT",
   "newChat": "新会话",
   "settingsAttribution": "To Give Life To Time",
