--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -8,7 +8,8 @@
   "aboutDialogDescription": "要查看此应用的源代码，请访问 {repoLink}。",
   "chatGPT35Desc": "一个快速且廉价的解决简易任务的模型",
   "chatGPT40Desc": "用更高的准确度解决复杂问题",
-  "chatGPT4oDesc": "最新的GPT4模型",
+  "chatGPT4oDesc": "最智能的GPT4模型",
+  "chatGPT4oMiniDesc": "经济实惠且智能的小型模型，适用于快速、轻量级的任务",
   "dallEDesc": "根据自然语言提示生成图像的模型",
   "claude3HaikuDesc": "最快且最紧凑的模型，实现近乎即时的响应",
   "claude3SonnetDesc": "在智能与输出速度之间完美平衡",
