fix model select dupilication bug and clean code
Signed-off-by: fantao <phantasy015@qq.com>

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -37,7 +37,7 @@
       }
     }
   },
-  "chatGPT35Desc": "A fast, inexpensive model for simple tasks",
+  "chatGPT35Desc": "fast, inexpensive model for simple tasks",
   "@chatGPT35Desc": {
     "description": "chatGPT35Desc"
   },
