create bot button move to AppBar
Signed-off-by: fantao <phantasy015@qq.com>

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -145,7 +145,7 @@
   "@botCentreMe": {
     "description": "bot centre me"
   },
-  "botCentreCreate" : "create bot",
+  "botCentreCreate" : "create",
   "@botCentreCreate": {
     "description": "create bot"
   },
