--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -31,7 +31,7 @@
   "selectModelTooltip" : "选择模型",
   "botCentreTitle" : "智能体中心",
   "botCentreMe" : "我的",
-  "botCentreCreate" : "创建智能体",
+  "botCentreCreate" : "创建",
   "exploreMore" : "探索更多",
   "openDrawerTooltip" : "展开",
   "closeDrawerTooltip" : "收起",
