add deepseek support
Signed-off-by: fantao <phantasy015@qq.com>

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -73,6 +73,10 @@
   "@claude35SonnetDesc": {
     "description": "claude35SonnetDesc"
   },
+  "deepseekDesc": "Open source model from China",
+  "@deepseekDesc": {
+    "description": "deepseekDesc"
+  },
   "botsCentre": "Explore",
   "@botsCentre": {
     "description": "botsCentre"
