add gemini support[1/2]: add UI
Signed-off-by: fantao <phantasy015@qq.com>

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -73,6 +73,10 @@
   "@claude35SonnetDesc": {
     "description": "claude35SonnetDesc"
   },
+  "geminiDesc": "New generation features, speed, and multimodal generation, suitable for a variety of tasks",
+  "@geminiDesc": {
+    "description": "geminiDesc"
+  },
   "deepseekDesc": "Open source model from China",
   "@deepseekDesc": {
     "description": "deepseekDesc"
