--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -15,6 +15,7 @@
   "claude3SonnetDesc": "在智能与输出速度之间完美平衡",
   "claude3OpusDesc": "应对高度复杂任务的强大模型",
   "claude35SonnetDesc": "最具智慧的模型",
+  "geminiDesc": "新一代功能、速度和多模态生成，适用于各种各样的任务",
   "deepseekDesc": "国内的开源模型",
   "botsCentre": "探索GPT",
   "login": "登录",
