gemini add 1.5 Pro model
Signed-off-by: fantao <phantasy015@qq.com>

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -77,6 +77,10 @@
   "@geminiDesc": {
     "description": "geminiDesc"
   },
+  "gemini15proDesc": "Complex reasoning tasks that require higher intelligence",
+  "@gemini15proDesc": {
+    "description": "gemini15proDesc"
+  },
   "deepseekDesc": "Open source model from China",
   "@deepseekDesc": {
     "description": "deepseekDesc"
