update some description
Signed-off-by: fantao <phantasy015@qq.com>

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -7,7 +7,7 @@
   "@homeHeaderGallery": {
     "description": "Header title on home screen for Gallery section."
   },
-  "chatDescription": "Based on ChatGPT",
+  "chatDescription": "Base on GPT, Claude, Gemini, DeepSeek",
   "@chatDescription": {
     "description": "Study description for Chat."
   },
