--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -17,7 +17,8 @@
   "claude35SonnetDesc": "最具智慧的模型",
   "geminiDesc": "新一代功能、速度和多模态生成，适用于各种各样的任务",
   "gemini15proDesc": "需要更高智能的复杂推理任务",
-  "deepseekDesc": "国内的开源模型",
+  "deepseekDesc": "国内开源模型: deepseek chat v3",
+  "deepseekR1Desc": "国内开源模型: deepseek reasoner r1",
   "botsCentre": "探索GPT",
   "login": "登录",
   "custmizeGPT": "个性化GPT",
