--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -13,10 +13,11 @@
   "chatGPTo1Desc": "o1推理模型旨在解决跨领域的难题",
   "chatGPTo3mDesc": "擅长科学、数学和编码任务",
   "dallEDesc": "根据自然语言提示生成图像的模型",
-  "claude3HaikuDesc": "最快且最紧凑的模型，实现近乎即时的响应",
+  "claude3HaikuDesc": "最快且最紧凑的模型，近乎即时的响应",
   "claude3SonnetDesc": "在智能与输出速度之间完美平衡",
   "claude3OpusDesc": "应对高度复杂任务的强大模型",
-  "claude35SonnetDesc": "最具智慧的模型",
+  "claude35SonnetDesc": "上一代最具智慧的Claude模型",
+  "claude37SonnetDesc": "最具智慧的Claude模型",
   "geminiDesc": "新一代功能、速度和多模态生成，适用于各种各样的任务",
   "gemini15proDesc": "需要更高智能的复杂推理任务",
   "deepseekDesc": "国内开源模型: deepseek chat v3",
