update model price description
Signed-off-by: fantao <phantasy015@qq.com>

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -137,9 +137,9 @@
   "@contextWindow": {
     "description": "Model Context window"
   },
-  "cost": "Cost",
-  "@cost": {
-    "description": "Model cost"
+  "price": "Price(per 1M tokens)",
+  "@price": {
+    "description": "Model price"
   },
   "inputFormat": "Input Format",
   "@inputFormat": {
