--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -25,16 +25,16 @@
   "botsCentre": "探索GPT",
   "login": "登录",
   "custmizeGPT": "个性化GPT",
-  "instructions": "使用说明",
+  "setting": "设置",
   "about": "关于",
   "logout": "登出",
   "adminstrator": "管理",
   "modelDescription": "描述",
   "contextWindow": "上下文窗口",
-  "price": "费用(每百万token)",
+  "price": "价格",
   "inputFormat": "输入格式",
   "inputFormat1": "文本",
-  "inputFormat2": "文本和图像",
+  "inputFormat2": "图像",
   "selectModelTooltip": "选择模型",
   "botCentreTitle": "智能体中心",
   "botCentreMe": "我的",
