--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -42,8 +42,10 @@
   "exploreMore": "探索更多",
   "openDrawerTooltip": "展开",
   "closeDrawerTooltip": "收起",
-  "botEdit": "编辑",
-  "botDelete": "删除",
+  "add": "添加",
+  "edit": "编辑",
+  "delete": "删除",
+  "remove": "移除",
   "botCreateTitle": "个性化配置智能体",
   "tools": "工具",
   "fileSearch": "文件检索",
@@ -57,5 +59,19 @@
   "functionsDialog": "添加函数",
   "functionsDialogTip": "模型将根据从用户收到的输入智能地决定调用函数",
   "save": "保存",
-  "cancel": "取消"
+  "cancel": "取消",
+  "mcpServers": "MCP服务",
+  "mcpNote": "仅支持桌面端平台",
+  "mcpAdd": "添加MCP",
+  "mcpEdit": "编辑MCP",
+  "mcpDel": "删除MCP",
+  "mcpName": "名字",
+  "mcpDesc": "描述",
+  "mcpCmd": "指令",
+  "mcpArgs": "参数",
+  "mcpConn": "自动连接",
+  "mcpConnNote": "当修改设置时自动应用",
+  "mcpVisibility": "MCP服务可见性",
+  "mcpVisibilityNote": "该服务是否对其他用户可见",
+  "mcpEnv": "自定义环境变量"
 }
