MCP: add transportType param
Signed-off-by: fantao <phantasy015@qq.com>

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -281,6 +281,10 @@
   "@mcpDesc": {
     "description": "Server description"
   },
+  "mcpURL": "Server URL",
+  "@mcpURL": {
+    "description": "Server URl"
+  },
   "mcpCmd": "Server Command",
   "@mcpCmd": {
     "description": "Server Command"
