--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -65,8 +65,9 @@
   "mcpAdd": "添加MCP",
   "mcpEdit": "编辑MCP",
   "mcpDel": "删除MCP",
-  "mcpName": "名字",
-  "mcpDesc": "描述",
+  "mcpName": "服务器名称",
+  "mcpDesc": "服务器简介",
+  "mcpURL": "服务器URL",
   "mcpCmd": "指令",
   "mcpArgs": "参数",
   "mcpConn": "自动连接",
